Quiz now returns if answer is correct/wrong and goes to next question

--- a/index.html
+++ b/index.html
@@ -21,7 +21,24 @@
             </p>
             <button class="btn" id="start-quiz">Start Quiz</button>
         </div>
-        <div class="page" id="quiz-question"></div>
+        <div class="page" id="quiz-question">
+            <h1 id="question-h1"></h1>
+            <ol>
+                <li>
+                    <button class="btn btn-answer" id="option1"></button>
+                </li>
+                <li>
+                    <button class="btn btn-answer" id="option2"></button>
+                </li>
+                <li>
+                    <button class="btn btn-answer" id="option3"></button>
+                </li>
+                <li>
+                    <button class="btn btn-answer" id="option4"></button>
+                </li>
+            </ol>
+            <h2 id="question-h2"></h2>
+        </div>
         <div class="page" id="quiz-finish"></div>
         <div class="page" id="quiz-high-scores"></div>
     </main>
