--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="./assets/css/style.css"/>
     <title>Code Quiz</title>
 </head>
-<body>
+<body id="page-content">
     <header>
         <button id="high-scores">View high scores</button>
         <div id="timer">Time: 0</div>
     </header>
 
-    <main id="page-content">
+    <main>
         <div class="page" id="quiz-start">
             <h1>Coding Quiz Challenge</h1>
             <p>
@@ -37,10 +37,23 @@
                     <button class="btn btn-answer" id="option4"></button>
                 </li>
             </ol>
-            <h2 id="question-h2"></h2>
         </div>
-        <div class="page" id="quiz-finish"></div>
-        <div class="page" id="quiz-high-scores"></div>
+        <div class="page" id="quiz-finish">
+            <h1 id="finish-h1">All done!</h1>
+            <p id="final-score"></p>
+            <div class="enter-initials">
+                <p>Enter initials: </p>
+                <input type="text" name="initials"/>
+                <button class="btn" id="save-high-score">Submit</button>
+            </div>
+        </div>
+        <h2 id="question-h2"></h2>
+        <div class="page" id="quiz-high-scores">
+            <h1 id="high-scores-h1">High Scores</h1>
+            <ol></ol>
+            <button class="btn" id="go-back">Go back</button>
+            <button class="btn" id="clear-high-scores">Clear high scores</button>
+        </div>
     </main>
 
     <script src="./assets/js/script.js"></script>
