--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <h2 id="question-h2"></h2>
         <div class="page" id="quiz-high-scores">
             <h1 id="high-scores-h1">High Scores</h1>
-            <ol></ol>
+            <ol id="high-scores-ol"></ol>
             <button class="btn" id="go-back">Go back</button>
             <button class="btn" id="clear-high-scores">Clear high scores</button>
         </div>
